small update: * scrollbar updated to fit theme *shake on second profile image ==fix== * skills section still causing issues, considering replacing.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,7 +227,7 @@ header.sticky{
 	text-align: center;
 }
 .sub-box{
-	padding: 45px 45px 45px 45px;
+	padding: 50px 45px 60px 45px; /*top right bottom left */
 	transition: ease .50s;
 	cursor: pointer;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow);
@@ -261,6 +261,8 @@ header.sticky{
 	grid-template-columns: repeat(2, 2fr);
 	align-items: center;
 	grid-gap: 2rem;
+	padding: 50px 45px 60px 45px; /*top right bottom left */
+
 }
 .about-img img{
     clip-path: circle();
@@ -462,7 +464,29 @@ header.sticky{
 	border-radius: 30px;
 	cursor: pointer;
 }
-
+.about-img:hover {
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
+  }
+@keyframes shake {
+	10%, 90% {
+	  transform: translate3d(-1px, 0, 0);
+	}
+	
+	20%, 80% {
+	  transform: translate3d(2px, 0, 0);
+	}
+  
+	30%, 50%, 70% {
+	  transform: translate3d(-4px, 0, 0);
+	}
+  
+	40%, 60% {
+	  transform: translate3d(4px, 0, 0);
+	}
+  }
 .endOfPage{
 	text-align: center;
 	padding: 40px;
@@ -482,6 +506,18 @@ header.sticky{
   .up-arrow {
     width: 3rem;
     height: 3rem;
+  }
+
+  ::-webkit-scrollbar{
+	width: 20px;
+  }
+
+  ::-webkit-scrollbar-track{
+	background: var(--second-color);
+  }
+
+  ::-webkit-scrollbar-thumb{
+	background: var(--main-color);
   }
 
 @media (max-width: 1425px){
